--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "livewire/livewire": "^3.0"
     },
     "require-dev": {
+        "askdkc/breezejp": "^1.7",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
